--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : simple site
+title : Murat Kumru
 author :
-  name : Karl Broman
-  email : kbroman@gmail.com
-  github : kbroman
-  twitter : kwbroman
-  feedburner : nil
+  name : Murat Kumru
+  email : mkumru.ee@gmail.com
+  github : mkumru
+  twitter : 
+  feedburner : 
 
 # NOTE: Replacing this next line with your own URL
 production_url : https://mkumru.github.io
